[package]
name = "AoC_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "test"
path = "src/test/test.rs"

[[bin]]
name = "04_12_p1"
path = "src/04_12/part_1.rs"

[[bin]]
name = "04_12_p2"
path = "src/04_12/part_2.rs"

[[bin]]
name = "05_12_p1"
path = "src/05_12/part_1.rs"

[[bin]]
name = "05_12_p2"
path = "src/05_12/part_2.rs"

[dependencies]
